--- a/.env
+++ b/.env
@@ -37,14 +37,14 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=smtp://32bbf31981aae4:5598adcf334a9a@sandbox.smtp.mailtrap.io:2525
 ###< symfony/mailer ###
 
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
 
-###> excelwebzone/recaptcha-bundle ###
-EWZ_RECAPTCHA_SITE_KEY=
-EWZ_RECAPTCHA_SECRET=
-###< excelwebzone/recaptcha-bundle ###
+###> victor-prdh/recaptcha-bundle ###
+GOOGLE_RECAPTCHA_SITE_KEY=6Lc3PpUpAAAAAJdtLvR0Fbqrnpl3Vz5xMKsI_Qav
+GOOGLE_RECAPTCHA_SECRET_KEY=6Lc3PpUpAAAAAMTgx6X41bKFxtLdc62OPYvHxu-o
+###< victor-prdh/recaptcha-bundle ###
