--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "doctrine/orm": "^2.16",
         "easycorp/easyadmin-bundle": "*",
         "excelwebzone/recaptcha-bundle": "*",
+        "google/recaptcha": "^1.3",
         "hwi/oauth-bundle": "^2.0",
+        "karser/karser-recaptcha3-bundle": "^0.1.26",
         "nelmio/cors-bundle": "^2.3",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.23",
@@ -39,6 +41,7 @@
         "symfony/property-info": "6.3.*",
         "symfony/runtime": "6.3.*",
         "symfony/security-bundle": "6.3.*",
+        "symfony/security-core": "6.3.*",
         "symfony/serializer": "6.3.*",
         "symfony/string": "6.3.*",
         "symfony/translation": "6.3.*",
@@ -46,9 +49,11 @@
         "symfony/validator": "6.3.*",
         "symfony/web-link": "6.3.*",
         "symfony/yaml": "6.3.*",
+        "symfonycasts/reset-password-bundle": "^1.21",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
-        "vich/uploader-bundle": "^2.2"
+        "vich/uploader-bundle": "^2.2",
+        "victor-prdh/recaptcha-bundle": "^1.8"
     },
     "config": {
         "allow-plugins": {
