--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,5 +20,8 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
+    # Configuration de votre service TokenGeneratorInterface
+    App\Service\TokenGeneratorInterface: '@App\Service\TokenGenerator'
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
