--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "easycorp/easyadmin-bundle": "*",
         "excelwebzone/recaptcha-bundle": "*",
         "google/recaptcha": "^1.3",
+        "guzzlehttp/guzzle": "^7.8",
         "hwi/oauth-bundle": "^2.0",
         "karser/karser-recaptcha3-bundle": "^0.1.26",
         "nelmio/cors-bundle": "^2.3",
