--- a/.env
+++ b/.env
@@ -15,8 +15,8 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
-APP_SECRET=d3524c856ef45e722aef615ff593842d
+APP_ENV=
+APP_SECRET=
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -26,25 +26,25 @@ APP_SECRET=d3524c856ef45e722aef615ff593842d
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@database:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL=
 ###< doctrine/doctrine-bundle ### 
 
 ###> symfony/messenger ###
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
-MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+MESSENGER_TRANSPORT_DSN=
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://32bbf31981aae4:5598adcf334a9a@sandbox.smtp.mailtrap.io:2525
+MAILER_DSN=
 ###< symfony/mailer ###
 
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+CORS_ALLOW_ORIGIN=
 ###< nelmio/cors-bundle ###
 
 ###> victor-prdh/recaptcha-bundle ###
-GOOGLE_RECAPTCHA_SITE_KEY=6Lc3PpUpAAAAAJdtLvR0Fbqrnpl3Vz5xMKsI_Qav
-GOOGLE_RECAPTCHA_SECRET_KEY=6Lc3PpUpAAAAAMTgx6X41bKFxtLdc62OPYvHxu-o
+GOOGLE_RECAPTCHA_SITE_KEY=
+GOOGLE_RECAPTCHA_SECRET_KEY=
 ###< victor-prdh/recaptcha-bundle ###   
